--- a/signin.html
+++ b/signin.html
@@ -20,7 +20,7 @@
                 </div>
             </div>
             <ul class="menu">
-                <li><a href="#">Learn more</a></li>
+                <li><a href="dashboard.html">Learn more</a></li>
                 <li><a href="signin.html">Sign In</a></li>
                 <li><a href="signup.html">Sing Up</a></li>
             </ul>
